[tool.poetry]
name = "minichanter"
version = "0.1.0"
description = ""
authors = ["ayatsuji3 <50767698+ayatsuji3@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
comet-ml = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
